RL1M fix : N + 1 최적화_visit, received, info, element_image